fix z-index settings

--- a/src/css/partial/modal.css
+++ b/src/css/partial/modal.css
@@ -7,6 +7,7 @@
     justify-items: center;
     align-items: center;
     padding: 0;
+    z-index: 1;
 }
 #modal-window{
     background: var(--ground);
